# esp-csi

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  README_cn.md  User_Guide.md  idf_component.yml  sdkconfig.defaults
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml  upload_component.yml
components/esp-radar/: CHANGELOG.md  README.md  idf_component.yml
docs/en/: CSI-Applications.md  Introduction-to-Wireless-Location.md  OFDM-introduction.md  Signal-Processing-Fundamentals.md  Wireless-Channel-Fundamentals.md  Wireless-indicators-CSI-and-RSSI.md
docs/zh_CN/: CSI-Applications.md  Introduction-to-Wireless-Location.md  OFDM-introduction  OFDM-introduction.md  Signal-Processing-Fundamentals.md  Wireless-Channel-Fundamentals.md  Wireless-indicators-CSI-and-RSSI.md
esp-radar/: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
examples/: README.md  README_cn.md
examples/connect_qcloud/: CMakeLists.txt  README.md  data_template_wifi_rader_light.json  devices_list.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s2  version.txt
examples/connect_rainmaker/: CMakeLists.txt  sdkconfig.defaults
examples/console_test/: CMakeLists.txt  README.md  README_cn.md  esp_csi_tool_gui.py  sdkconfig.defaults
examples/console_test/main/: utils.c  (+7 more)
examples/esp-crab/: README.md  README_CN.md
examples/get-started/: README.md  README_cn.md
include/: esp_radar.h  esp_rader.h
test/: csi_data.csv  csi_data_with_head.csv
tools/: analisys.py  check_idf_version.sh  csi_amplitude_corr.py  csi_amplitude_plot.py
(+113 files in other folders)
